index update and child pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr. Greg Torda - Remote and Sensible</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            padding: 20px;
+        }
+        img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            margin: 20px 0;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 10px 0;
+        }
+        p {
+            font-size: 1.2em;
+            margin: 10px 20px;
+        }
+        .button-container {
+            margin-top: 20px;
+        }
+        .button {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1em;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+        footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
 <body>
-    <h1>Tis me!</h1>
-    <p> Work in progress...</p>
+    <header>
+        <img src="GT.jpg" alt="Dr. Greg Torda">
+        <h1>Dr. Greg Torda</h1>
+        <p>A climate anxious marine biologist's tumblings and occasional triumphs in life.</p>
+    </header>
+    <div class="button-container">
+        <a href="https://scholar.google.com/citations?user=-bg_1j8AAAAJ&hl=en" class="button" target="_blank">Google Scholar</a>
+        <a href="r-tutorials.html" class="button">R Tutorials</a>
+        <a href="mini-films.html" class="button">Mini Films</a>
+    </div>
+    <footer>
+        <p>© 2024 Dr. Greg Torda. Built with simplicity and hosted on GitHub Pages.</p>
+    </footer>
 </body>
 </html>
