mini films and contact

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </header>
     <div class="button-container">
         <a href="https://scholar.google.com/citations?user=-bg_1j8AAAAJ&hl=en" class="button" target="_blank">Google Scholar</a>
-        <a href="r-tutorials.html" class="button">R Tutorials</a>
+        <a href="r-tutorials.html" class="button">Fun with R</a>
         <a href="mini-films.html" class="button">Mini Films</a>
+        <a href="contact.html" class="button">Contact</a>
     </div>
     <footer>
         <p>© 2024 Dr. Greg Torda. Built with simplicity and hosted on GitHub Pages.</p>
