mini-films update

--- a/mini-films.html
+++ b/mini-films.html
@@ -140,11 +140,12 @@
             <img src="https://img.youtube.com/vi/d374l8gsDZQ/hqdefault.jpg" alt="The whales of Kamay">
             <h2 class="film-title">The whales of Kamay</h2>
             <p class="film-text" onclick="toggleText('text1')">
-                Humpback whales embark on a remarkable seasonal migration...
+                Humpback whales are on the move every year, heading south for...
                 <span>(Read more)</span>
             </p>
             <div id="text1" class="expanded-text">
-                Humpback whales embark on a remarkable seasonal migration, spending their summers feeding in the nutrient-rich polar waters and their winters in tropical seas, where they socialize, mate, and give birth. Along the east coast of Australia, these majestic creatures can often be seen near Sydney. Pregnant and well-fed, humpback mothers typically appear in May and June as they travel northward, and they return with their calves from September to October, heading back to the icy waters of Antarctica.
+                Humpback whales are on the move every year, heading south for the summer to feed in polar waters and north for the winter to mate, give birth, and socialize in the tropics. On the east coast of Australia, they’re a regular sight along the Sydney coastline. Pregnant mothers show up around May and June as they migrate north, and then return from September to October with their newborn calves, making their way back to Antarctica.
+                If you’re in Sydney during migration season, one of the best places to watch them from land is the cliffs at <a href="https://www.nationalparks.nsw.gov.au/visit-a-park/parks/kamay-botany-bay-national-park" target="_blank"> Kamay Botany Bay National Park</a>. It’s hard to beat the view—whales breaching and tail-slapping against the backdrop of open ocean, all from a spot where you’re comfortably perched on solid ground.
                 <button onclick="toggleText('text1')">Close</button>
             </div>
             <a href="https://youtu.be/d374l8gsDZQ" target="_blank" class="video-link">Watch on YouTube</a>
@@ -154,11 +155,12 @@
             <img src="https://img.youtube.com/vi/IzDDNREWDvk/hqdefault.jpg" alt="The wild hucul of Hungary">
             <h2 class="film-title">The wild hucul of Hungary</h2>
             <p class="film-text" onclick="toggleText('text2')">
-                The wild Hucul horses of the Aggtelek National Park...
+                The wild Hucul horses of of <a href="http://anp.nemzetipark.gov.hu/index.php?lang=en" target="_blank"> Aggtelek National Park</a> in Hungary...
                 <span>(Read more)</span>
             </p>
             <div id="text2" class="expanded-text">
-                The wild Hucul horses of the Aggtelek National Park, Hungary, are a living link to a bygone era, embodying the rugged resilience of the Carpathian region. These hardy horses, often called "the little horse of the mountains," are direct descendants of ancient breeds used for work and transport in harsh mountain terrains.
+                The wild Hucul horses of <a href="http://anp.nemzetipark.gov.hu/index.php?lang=en" target="_blank"> Aggtelek National Park</a> in Hungary are a fascinating link to the past, embodying the tough, no-nonsense resilience of the Carpathian region. Often called "the little horse of the mountains," these sturdy animals are descendants of ancient breeds once relied upon for work and transport in harsh mountain terrain.
+                In Jósvafő, within the heart of Aggtelek National Park, a special reserve keeps this tradition alive. Here, the Hucul horses live in a semi-wild state, roaming freely across meadows and wooded hills. They’re smart, tough, and sure-footed—perfectly adapted to the rugged landscape they call home. Beyond being a conservation success, these horses are part of Hungary’s cultural heritage and contribute to the park’s ecosystem by naturally grazing the land. It’s a glimpse into history, wrapped up in the beauty of nature.             
                 <button onclick="toggleText('text2')">Close</button>
             </div>
             <a href="https://youtu.be/IzDDNREWDvk" target="_blank" class="video-link">Watch on YouTube</a>
@@ -168,25 +170,27 @@
             <img src="https://img.youtube.com/vi/D_S2FOmlgRA/hqdefault.jpg" alt="Lady Musgrave Island">
             <h2 class="film-title">Lady Musgrave Island</h2>
             <p class="film-text" onclick="toggleText('text3')">
-                One of my favourite islands of the Great Barrier Reef...
+                Lady Musgrave Island is hands down one of my favorite spots on the Great...
                 <span>(Read more)</span>
             </p>
             <div id="text3" class="expanded-text">
-                One of my favourite islands of the Great Barrier Reef is Lady Musgrave Island. Nestled within the Capricornia Cays National Park, Lady Musgrave Island is a breathtaking gem that captures the essence of marine and island beauty. Its (almost) fully enclosed lagoon, one of the few in the region, provides a natural safe haven for marine life.
+                Lady Musgrave Island is hands down one of my favorite spots on the Great Barrier Reef. Tucked away in the <a href="https://parks.desi.qld.gov.au/parks/capricornia-cays/about" target="_blank">Capricornia Cays National Park</a>, it’s a little slice of paradise. Its (almost) fully enclosed lagoon is one of the few in the region, providing a safe haven for all kinds of marine life.
+                In the middle of it all is a tiny sand cay, shaded by a lush Pisonia forest. This is prime real estate for noddy terns, wedge-tailed shearwaters, and other seabirds that call the canopy home. On the beaches, sea turtles haul themselves ashore to nest, while just offshore, the surrounding coral reef is alive with fish, invertebrates, and endless underwater activity. Manta rays and humpback whales also swing by during their migrations, making it even more special. It’s a place where nature really puts on a show.
                 <button onclick="toggleText('text3')">Close</button>
             </div>
             <a href="https://youtu.be/D_S2FOmlgRA" target="_blank" class="video-link">Watch on YouTube</a>
         </div>
         <!-- Film 4 -->
         <div class="film">
-            <img src="https://img.youtube.com/vi/XX0uE4mwDP4/hqdefault.jpg" alt="Mallorca – island of a thousand faces">
-            <h2 class="film-title">Mallorca – island of a thousand faces</h2>
+            <img src="https://img.youtube.com/vi/XX0uE4mwDP4/hqdefault.jpg" alt="Mallorca – island of 1000 faces">
+            <h2 class="film-title">Mallorca – island of 1000 faces</h2>
             <p class="film-text" onclick="toggleText('text4')">
-                Nestled in the Mediterranean Sea, Mallorca is a captivating blend...
+                <a href="https://www.mallorca.es/en/inici" target="_blank">Mallorca</a>, sitting in the heart of the Mediterranean Sea...
                 <span>(Read more)</span>
             </p>
             <div id="text4" class="expanded-text">
-                Nestled in the Mediterranean Sea, Mallorca is a captivating blend of nature, history, and culture. This small Balearic Island offers a stunning array of landscapes - from pristine beaches and rugged cliffs to soaring mountains, ancient olive groves, and charming villages steeped in history.
+                <a href="https://www.mallorca.es/en/inici" target="_blank">Mallorca</a>, sitting in the heart of the Mediterranean Sea just off the coast of Barcelona and Valencia, is an island that seems to have it all. From its pristine beaches and rugged cliffs to towering mountains, ancient olive groves, and picturesque villages, it’s a place where nature, history, and culture collide.
+                The island’s capital, Palma, is a perfect mix of old-world charm and modern energy. Its Gothic cathedral, La Seu, dominates the skyline, while the old town invites you to wander through its cobblestone streets, discover hidden courtyards, and soak up the lively atmosphere of its plazas. 
                 <button onclick="toggleText('text4')">Close</button>
             </div>
             <a href="https://youtu.be/XX0uE4mwDP4" target="_blank" class="video-link">Watch on YouTube</a>
@@ -196,14 +200,28 @@
             <img src="https://img.youtube.com/vi/mTxdkkpzUSk/hqdefault.jpg" alt="Morning yoga">
             <h2 class="film-title">Morning yoga</h2>
             <p class="film-text" onclick="toggleText('text5')">
-                A departure from my usual mini-films, but I couldn’t resist capturing this moment...
+                A departure from my usual mini-films, but I couldn’t resist capturing this ...
                 <span>(Read more)</span>
             </p>
             <div id="text5" class="expanded-text">
-                A departure from my usual mini-films, but I couldn’t resist capturing this moment. The stunning Whitsunday Islands, a diverse archipelago of islands carved with deep inlets, white sandy beaches, and vibrant coral reefs, served as my home for about four weeks.
+                A departure from my usual mini-films, but I couldn’t resist capturing this moment. The stunning <a href="https://parks.desi.qld.gov.au/parks/whitsunday-islands" target="_blank">Whitsunday Islands</a>, a diverse archipelago of islands carved with deep inlets, white sandy beaches, and vibrant coral reefs, served as my home for about four weeks. Macona Inlet, in particular, provided a tranquil haven. Some mornings were simply too beautiful not to film. Here’s a brief glimpse into my morning yoga routine amidst this breathtaking backdrop.
                 <button onclick="toggleText('text5')">Close</button>
             </div>
             <a href="https://youtu.be/mTxdkkpzUSk" target="_blank" class="video-link">Watch on YouTube</a>
+        </div>
+        <!-- Film 6 -->
+        <div class="film">
+            <img src="https://img.youtube.com/vi/Pyp8NsN1Qtw/hqdefault.jpg" alt="Lady Elliott Island">
+            <h2 class="film-title">Lady Elliott Island</h2>
+            <p class="film-text" onclick="toggleText('text5')">
+                Lady Elliott Island sits at the southernmost tip of the Great Barrier Reef...
+                <span>(Read more)</span>
+            </p>
+            <div id="text5" class="expanded-text">
+                Lady Elliott Island sits at the southernmost tip of the Great Barrier Reef, and it’s pretty special. Unlike places like Lady Musgrave, it doesn’t have a lagoon. Instead, you’ve got coral reefs starting right at the beach—no need to go far to see the action. You can snorkel straight off the shore and find turtles, reef sharks, even humpback whales and manta rays, i the winter months. On land, it’s mostly Pisonia forests with noddy terns and shearwaters nesting wherever they can. 
+                <button onclick="toggleText('text5')">Close</button>
+            </div>
+            <a href="https://youtu.be/Pyp8NsN1Qtw" target="_blank" class="video-link">Watch on YouTube</a>
         </div>
     </div>
 </body>
