--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p>A climate anxious marine biologist's tumblings and occasional triumphs in life.</p>
     </header>
     <div class="button-container">
-        <a href="https://scholar.google.com/citations?user=-bg_1j8AAAAJ&hl=en" class="button" target="_blank">Google Scholar</a>
+        <a href="https://scholar.google.com/citations?user=-bg_1j8AAAAJ&hl=en" class="button" target="_blank">Research</a>
         <a href="r-tutorials.html" class="button">Fun with R</a>
         <a href="mini-films.html" class="button">Mini Films</a>
         <a href="contact.html" class="button">Contact</a>
