--- a/r-tutorials.html
+++ b/r-tutorials.html
@@ -114,6 +114,13 @@
             <a href="climate_web.html" target="_blank">View Tutorial</a>
         </div>
         <!-- Project 2 -->
+         <div class="project">
+            <img src="ppt_2014-2023_1958-1967_diff_02.png" alt="TerraClim global viz">
+            <h2>Global TerraClim visualizations</h2>
+            <p>Visualize temporal differences in climate variables globally.</p>
+            <a href="terraBatch_web.html" target="_blank">View Tutorial</a>
+        </div>        
+        <!-- Project 3 -->
         <div class="project">
             <img src="shinyApp.png" alt="Shiny TerraClim App">
             <h2>Shiny App to Access TerraClim</h2>
