--- a/r-tutorials.html
+++ b/r-tutorials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R Tutorials - Dr. Greg Torda</title>
+    <title>Fun with R - Dr. Greg Torda</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,37 +99,45 @@
 </head>
 <body>
     <header>
-        <h1>R Tutorials</h1>
+        <h1>Fun with R</h1>
         <div class="nav-buttons">
             <a href="index.html" class="nav-button">Home</a>
             <a href="contact.html" class="nav-button">Contact</a>
         </div>
     </header>
     <div class="project-container">
-        <!-- Project 1 -->
+        <!-- Project 2 -->
         <div class="project">
             <img src="intro_TerraClim.png" alt="Fun intro to TerraClim">
             <h2>Fun intro to TerraClim</h2>
             <p>Discover how to download and analyze TerraClim data.</p>
             <a href="climate_web.html" target="_blank">View Tutorial</a>
         </div>
-        <!-- Project 2 -->
+        <!-- Project 3 -->
          <div class="project">
             <img src="ppt_2014-2023_1958-1967_diff_02.png" alt="TerraClim global viz">
             <h2>Global TerraClim visualizations</h2>
             <p>Visualize temporal differences in climate variables globally.</p>
             <a href="terraBatch_web.html" target="_blank">View Tutorial</a>
         </div>        
-        <!-- Project 3 -->
+        <!-- Project 4 -->
         <div class="project">
             <img src="shinyApp.png" alt="Shiny TerraClim App">
             <h2>Shiny App to Access TerraClim</h2>
             <p>Access TerraClim data dynamically with this interactive Shiny app.</p>
             <a href="https://dontorda.shinyapps.io/globalpoint_app/" target="_blank">Explore App</a>
         </div>
-    </div>
+         <!-- Project 1 -->
+         <div class="project">
+            <img src="icebergs.png" alt="Iceberg Tracker">
+            <h2>Antarctic Iceberg Tracker</h2>
+            <p>Visualizing the drift paths of Antarctic icebergs.</p>
+            <a href="https://dontorda.shinyapps.io/iceberg/" target="_blank">Explore App</a>
+        </div>
+       </div>
     <footer>
         <p>© 2024 Dr. Greg Torda. Built with simplicity and hosted on GitHub Pages.</p>
     </footer>
 </body>
 </html>
+
