--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         }
         header {
             padding: 20px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -30,14 +30,14 @@
         .nav-button {
             text-decoration: none;
             color: white;
-            background-color: #0056b3;
+            background-color: #2c455f;
             padding: 10px 20px;
             border-radius: 5px;
             font-size: 0.9em;
             transition: background-color 0.3s;
         }
         .nav-button:hover {
-            background-color: #003f8a;
+            background-color: #41678e;
         }
         form {
             max-width: 500px;
@@ -66,7 +66,7 @@
             display: block;
             width: 100%;
             padding: 10px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: white;
             border: none;
             border-radius: 5px;
@@ -75,7 +75,7 @@
             transition: background-color 0.3s;
         }
         form button:hover {
-            background-color: #0056b3;
+            background-color: #41678e;
         }
         footer {
             margin-top: 20px;
