--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             display: inline-block;
             margin: 10px;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
@@ -45,7 +45,7 @@
             transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #0056b3;
+            background-color: #41678e;
         }
         footer {
             margin-top: 30px;
