--- a/mini-films.html
+++ b/mini-films.html
@@ -14,7 +14,7 @@
         }
         header {
             padding: 20px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: white;
             display: flex; /* Enables flexbox layout */
             justify-content: space-between; /* Spaces elements out evenly across the header */
@@ -33,13 +33,13 @@
         nav a {
             text-decoration: none;
             color: white;
-            background-color: #0056b3;
+            background-color: #2c455f;
             padding: 8px 16px;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
         nav a:hover {
-            background-color: #003f8a;
+            background-color: #41678e;
         }
         .film-container {
             max-width: 1000px;
@@ -73,7 +73,7 @@
             cursor: pointer;
         }
         .film-text span {
-            color: #007bff;
+            color: #032d59;
             text-decoration: underline;
         }
         .expanded-text {
@@ -101,7 +101,7 @@
             transition: background-color 0.3s;
         }
         .expanded-text button:hover {
-            background-color: #0056b3;
+            background-color: #41678e;
         }
         .video-link {
             text-decoration: none;
@@ -109,14 +109,14 @@
             text-align: center;
             margin: 10px;
             padding: 8px 16px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: white;
             border-radius: 5px;
             font-size: 0.9em;
             transition: background-color 0.3s;
         }
         .video-link:hover {
-            background-color: #0056b3;
+            background-color: #41678e;
         }
     </style>
     <script>
