--- a/r-tutorials.html
+++ b/r-tutorials.html
@@ -15,7 +15,7 @@
         }
         header {
             padding: 20px;
-            background-color: #007bff;
+            background-color: #032d59;
             color: #fff;
             display: flex;
             justify-content: space-between;
@@ -34,14 +34,14 @@
         .nav-button {
             text-decoration: none;
             color: white;
-            background-color: #0056b3;
+            background-color: #2c455f;
             padding: 10px 20px;
             border-radius: 5px;
             font-size: 0.9em;
             transition: background-color 0.3s;
         }
         .nav-button:hover {
-            background-color: #003f8a;
+            background-color: #41678e;
         }
         .project-container {
             display: flex;
@@ -82,13 +82,13 @@
             margin: 10px;
             text-decoration: none;
             color: #fff;
-            background-color: #007bff;
+            background-color: #032d59;
             border-radius: 5px;
             font-size: 0.9em;
             transition: background-color 0.3s;
         }
         .project a:hover {
-            background-color: #0056b3;
+            background-color: #41678e;
         }
         footer {
             margin-top: 20px;
