code coming soon

--- a/r-tutorials.html
+++ b/r-tutorials.html
@@ -124,14 +124,14 @@
         <div class="project">
             <img src="shinyApp.png" alt="Shiny TerraClim App">
             <h2>Shiny App to Access TerraClim</h2>
-            <p>Access TerraClim data dynamically with this interactive Shiny app.</p>
+            <p>Access TerraClim data dynamically with this interactive Shiny app (code coming soon).</p>
             <a href="https://dontorda.shinyapps.io/globalpoint_app/" target="_blank">Explore App</a>
         </div>
          <!-- Project 1 -->
          <div class="project">
             <img src="icebergs.png" alt="Iceberg Tracker">
             <h2>Antarctic Iceberg Tracker</h2>
-            <p>Visualizing the drift paths of Antarctic icebergs.</p>
+            <p>Visualizing the drift paths of Antarctic icebergs (code coming soon).</p>
             <a href="https://dontorda.shinyapps.io/iceberg/" target="_blank">Explore App</a>
         </div>
        </div>
